<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_ciência_Da_Computacao">

    <fragment
        android:id="@+id/nav_ciência_Da_Computacao"
        android:name="com.example.ativ02.ui.ciência_Da_Computacao.Ciência_Da_ComputacaoFragment"
        android:label="@string/menu_ciência_Da_Computacao"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_galeria"
        android:name="com.example.ativ02.ui.galeria.GaleriaFragment"
        android:label="@string/menu_galeria"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_analise_e_desenvolvimento_de_sistemas"
        android:name="com.example.ativ02.ui.analise_e_desenvolvimento_de_sistemas.Analise_e_desenvolvimento_de_sistemasFragment"
        android:label="@string/menu_analise_e_desenvolvimento_de_sistemas"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_quem_somos"
        android:name="com.example.ativ02.ui.quem_somos.Quem_SomosFragment"
        android:label="@string/menu_quem_Somos"
        tools:layout="@layout/fragment_quem__somos" />

    <fragment
        android:id="@+id/nav_contato"
        android:name="com.example.ativ02.ui.contato.ContatoFragment"
        android:label="@string/menu_contato"
        tools:layout="@layout/fragment_contato" />

    <fragment
        android:id="@+id/nav_bem_estar"
        android:name="com.example.ativ02.ui.bem_estar_do_aluno.BemEstarDoAlunoFragment"
        android:label="@string/menu_bem_estar"
        tools:layout="@layout/fragment_bem_estar_do_aluno" />

</navigation>